--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -3,13 +3,13 @@
     x:Class="VE.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:VE"
+    xmlns:view="clr-namespace:VE.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="VE">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate view:MainPage}"
         Route="MainPage" />
 
 </Shell>
