--- a/App.xaml
+++ b/App.xaml
@@ -4,11 +4,16 @@
              xmlns:local="clr-namespace:VE"
              x:Class="VE.App">
     <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
-                <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
+        <Color x:Key="Primary">#393E46</Color>
+        <Color x:Key="PrimaryText">White</Color>
+        <Style TargetType="Button">
+            <Setter Property="BackgroundColor" Value="{StaticResource Primary}"/>
+            <Setter Property="TextColor" Value="{StaticResource PrimaryText}"/>
+            <Setter Property="FontAttributes" Value="Bold"/>
+            <Setter Property="CornerRadius" Value="6"/>
+            <Setter Property="Padding" Value="10,4"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Margin" Value="0,4"/>
+        </Style>
     </Application.Resources>
 </Application>
