--- a/App.xaml
+++ b/App.xaml
@@ -2,6 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:VE"
+             xmlns:tools="clr-namespace:VE.Tools"
              x:Class="VE.App">
     <Application.Resources>
         <Color x:Key="Primary">#393E46</Color>
@@ -15,5 +16,8 @@
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="Margin" Value="0,4"/>
         </Style>
+        <ResourceDictionary>
+            <tools:RgbStringToIntConverter x:Key="RgbStringToIntConverter"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
