--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -2,7 +2,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:skia="clr-namespace:SkiaSharp.Views.Maui.Controls;assembly=SkiaSharp.Views.Maui.Controls"
              x:Class="VE.Views.MainPage"
-             Title="Edytor graficzny">
+             x:Name="MainPageRoot"
+             Title="Visual Editor">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -149,15 +150,26 @@
         <!-- Panel warstw -->
         <StackLayout Grid.Row="1" Grid.Column="3" BackgroundColor="#525252" Padding="8">
             <Label Text="Warstwy" FontAttributes="Bold"/>
-            <ListView>
-                <ListView.ItemsSource>
-                    <x:Array Type="{x:Type x:String}">
-                        <x:String>Tło</x:String>
-                        <x:String>Warstwa 1</x:String>
-                    </x:Array>
-                </ListView.ItemsSource>
+            <ListView ItemsSource="{Binding Layers}" SelectedItem="{Binding SelectedLayer}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout Orientation="Horizontal" Spacing="6">
+                            <Label Text="{Binding Name}" WidthRequest="90" />
+                            <Button Text="{Binding IsVisible, Converter={StaticResource BoolToEyeIconConverter}}" 
+                                Command="{Binding DataContext.ToggleLayerVisibilityCommand, Source={x:Reference Name=MainPageRoot}}" 
+                                CommandParameter="{Binding .}" WidthRequest="30" />
+                            <Button Text="Usuń"
+                                Command="{Binding DataContext.RemoveLayerCommand, Source={x:Reference Name=MainPageRoot}}"
+                                CommandParameter="{Binding .}" WidthRequest="43" />
+                        </StackLayout>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
-            <Button Text="Dodaj warstwę" Margin="0,10,0,0"/>
+            <Button 
+                Text="Dodaj warstwę" 
+                Margin="0,10,0,0"
+                Command="{Binding AddLayerCommand}"
+                />
         </StackLayout>
     </Grid>
 </ContentPage>
