fix: Layers work with eraser and brush

--- a/App.xaml
+++ b/App.xaml
@@ -19,6 +19,7 @@
         <ResourceDictionary>
             <tools:RgbStringToIntConverter x:Key="RgbStringToIntConverter"/>
             <tools:BoolToEyeIconConverter x:Key="BoolToEyeIconConverter"/>
+            <tools:BackgroundDeleteBlockerConverter x:Key="BackgroundDeleteBlockerConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
