fix: Selecting layers works, deleting and adding layers also works, user cant delete background, todo: show which layer is choosen

--- a/App.xaml
+++ b/App.xaml
@@ -20,6 +20,7 @@
             <tools:RgbStringToIntConverter x:Key="RgbStringToIntConverter"/>
             <tools:BoolToEyeIconConverter x:Key="BoolToEyeIconConverter"/>
             <tools:BackgroundDeleteBlockerConverter x:Key="BackgroundDeleteBlockerConverter" />
+            <tools:SelectedLayerColorConverter x:Key="SelectedLayerColorConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
